name:                reflex-aeson-orphans
version:             0.2.0.0
synopsis:            Defines aeson FromJSON and ToJSON orphan instances for reflex data types.
license:             BSD3
license-file:        LICENSE
author:              Luigy Leon
maintainer:          maintenance@obsidian.systems
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:   Reflex.Aeson.Orphans
  build-depends:     base >=4.9 && <4.12
                   , aeson
                   , reflex
                   , dependent-map
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options: -Wall -fno-warn-orphans
